--- a/Scribbler_Project/stub/index.html
+++ b/Scribbler_Project/stub/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
 
     <!-- Place all CSS for header in this file -->
@@ -18,6 +18,31 @@
         <div class="header">
 
         	<!-- Insert code for Sign Up, Sign In button here. Add code for "ScriBBler" heading and the sub-heading -->
+            <p class="page-title">ScriBBler</p>
+            <p class="subTitle">Explore, Imagine, Create</p>
+            <div class="signbuttons">
+                <button type="button" id="buttonForSignIn">Sign In</button>
+                <button id="buttonForSignUp">Sign Up</button>
+            </div>
+            <div id="myModal" class="modal">
+                <div class="signUpContent">
+                    <span class="close">&times;</span>
+                    <h3>Get Started</h3>
+                    <hr>
+                    <form>
+                        <label class="labelText"> Full Name: </label>
+                        <input type="text" placeholder="Enter Full Name" id="fullName" required>
+                        <label class="labelText">User Name:</label>
+                        <input type="text" placeholder="Enter Username" id="userName" required>
+                        <label>Password</label>
+                        <input type="password" placeholder="Enter Password" id="password" required>
+                        <label>Confirm Password</label>
+                        <input type="password" placeholder="Confirm Password" id="confirmPassword" required>
+                        <button class="submit-btn">Sign Up</button>
+                    </form>
+                </div>
+            </div>
+
 
         </div>
            
