Changes 2:Like and Comment

--- a/Scribbler_Project/stub/html/post.html
+++ b/Scribbler_Project/stub/html/post.html
@@ -36,6 +36,17 @@
     </p>
 </div>
 
+<div>
+        <button class="postLike btn" id="btn2" onclick="toggleLike()"><span>Like</span>
+        </button>
+        <p id="counterliked">Be the first one to like this!</p>
+</div>
+
+        
+
+<div class="commentPost">
+        <textarea rows="4" cols="100" placeholder="Leave a comment"></textarea>
+    </div>
 
 
     <!-- Insert code for Like button, Comment button, Comment box here-->
