Edits to remove errors 2

--- a/Scribbler_Project/stub/index.html
+++ b/Scribbler_Project/stub/index.html
@@ -86,7 +86,7 @@
             <div id="createPostContent">
                 <div id="createPost"><b>Pen Your Post</b><span class="close">&times;</span>
                 </div>
-                <form method="post">
+                <form method="post" class="postclass">
                     <label for="title" class="labelText">Title:</label>
                     <input type="text" id="title" required>
                     <label for="content" class="labelText">Content:</label>
